--- a/index.html
+++ b/index.html
@@ -20,12 +20,65 @@
   <link rel="stylesheet" href="../css/normalize.css">
 
   <meta name="theme-color" content="#fafafa">
+
+  <title>Unplugged Retreat</title>
 </head>
 
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <header>
+    <div class="content-wrapper">
+      <a href="#"><img src="" alt="unplugged logo"></a>
+      <div class="header-divider"></div>
+      <nav>
+        <ul>
+          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="about/index.html" target="_blank">About</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <section>
+      <h1>Retreat from the desk, return refreshed.</h1>
+    </section>
+
+    <aside>
+      <h2>Want to join the next retreat?</h2>
+      <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+      <h2>Find out more</h2>
+      <input type="text" name="name" value="email address">
+      <input type="button" value="Download Itinerary">
+      <button>Download Itinerary</button>
+    </aside>
+
+  </main>
+
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <div class="contact">
+          <h2>Contact</h2>
+          <address>
+            <p>555-555-5555</p>
+            <p>hello@unplugged.com</p>
+          </address>
+        </div>
+        <div class="social">
+          <h2>Social</h2>
+          <div class="social-icons">
+            <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="copyright">
+    </div>
+  </footer>
+
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
