--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
   <!-- Add your site or application content here -->
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="" alt="unplugged logo"></a>
+      <a href="#">
+        <img src="" alt="unplugged logo">
+      </a>
       <div class="header-divider"></div>
       <nav>
         <ul>
@@ -41,41 +43,106 @@
   </header>
 
   <main>
-    <section>
-      <h1>Retreat from the desk, return refreshed.</h1>
+    
+    <section class="hero-area">
+      <div class="content-wrapper">
+        <h1>Retreat from the desk, return refreshed.</h1>
+      </div>  
     </section>
 
     <aside>
-      <h2>Want to join the next retreat?</h2>
-      <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
-      <h2>Find out more</h2>
-      <input type="text" name="name" value="email address">
-      <input type="button" value="Download Itinerary">
-      <button>Download Itinerary</button>
+      <div class="content-wrapper">
+        <div class="form-description">
+          <h3>Want to join the next retreat?</h3>
+          <p>
+            Find out when we are holding our next retreat and how your company or team can sign up!
+          </p>
+        </div>
+        <div class="from">
+          <h3>Find out more</h3>
+          <input type="text" name="name" value="email address">
+          <input type="button" value="Download Itinerary">
+        </div>
+      </div>
     </aside>
 
-  </main>
+    <section class="features">
+      <div class="content-wrapper">
+        <h2>Have the work week you always dreamed of - without the bad wifif.</h2>
+        <div class="features-items">
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Private chef team providing on demand meals - just your team ktichen.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Reatreat facilitator to manage your day to day activities to your all get a chance to reset.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+
+    <section class="reviews">
+      <div class="content-wrapper">
+        <h2>Be a better team in 5 days, like these.</h2>
+        <article>
+          <div>
+            <h3>LaCrue Bottling Co.<br>October 2017</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+              ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+              fugiat nulla pariatur.
+            </p>
+          </div>
+        </article>
+      </div>
+    </section>
+
+  </main> <!-- main wrapper -->
 
   <footer>
     <div class="content-wrapper">
       <div class="footer-content">
         <div class="contact">
-          <h2>Contact</h2>
+          <h4>Contact</h4>
           <address>
-            <p>555-555-5555</p>
-            <p>hello@unplugged.com</p>
+            <p>555-555-5555<br>
+            hello@unplugged.com
+          </p>
           </address>
         </div>
         <div class="social">
-          <h2>Social</h2>
+          <h4>Social</h4>
           <div class="social-icons">
-            <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
+            <p>
+              <a
+               href="https://www.facebook.com/yoursite" target="_blank"></a>
+              </p>
           </div>
         </div>
-      </div>
+      </div> <!-- footer content ends -->
     </div>
-
+    <!--footer content-wrapper ends-->
     <div class="copyright">
+      <p>Copyright 2018 | Unplugged</p>
     </div>
   </footer>
 
