--- a/about/index.html
+++ b/about/index.html
@@ -29,9 +29,11 @@
 
     <header>
         <div class="content-wrapper">
-          <a href="#">
-            <img src="" alt="unplugged logo">
-          </a>
+          <figure>
+            <a href="#">
+              <img src="img/unpluggedlogo.png" alt="unplugged logo">
+            </a>
+          </figure>
           <div class="header-divider"></div>
           <nav>
             <ul>
@@ -64,7 +66,7 @@
             
         <section class="map">
             <figure>
-
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3105.509874169639!2d-77.03736013482435!3d38.88945412957185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7b7a1be0c2e7f%3A0xe97346828ed0bfb8!2sWashington%20Monument!5e0!3m2!1sen!2sus!4v1631738081053!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </figure>
         </section>
 
