--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
   <meta name="theme-color" content="#fafafa">
 
   <!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+
+  <script src="https://kit.fontawesome.com/fb50a41140.js" crossorigin="anonymous"></script>
 
   <title>Unplugged Retreat</title>
 </head>
@@ -76,27 +78,39 @@
         <h2>Have the work week you always dreamed of - without the bad wifif.</h2>
         <div class="features-items">
           <article>
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon">
+              <i class="fas fa-campground"></i>
+            </p>
             <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
           </article>
           <article>
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon">
+              <i class="fas fa-bed"></i>
+            </p>
             <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
           </article>
           <article>
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon">
+              <i class="fas fa-utensils"></i>
+            </p>
             <p class="features-item-description">Private chef team providing on demand meals - just your team ktichen.</p>
           </article>
           <article>
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon">
+              <i class="fas fa-shoe-prints"></i>
+            </p>
             <p class="features-item-description">5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.</p>
           </article>
           <article>
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon">
+              <i class="fas fa-smile"></i>
+            </p>
             <p class="features-item-description">Reatreat facilitator to manage your day to day activities to your all get a chance to reset.</p>
           </article>
           <article>
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon">
+              <i class="fas fa-wifi"></i>
+            </p>
             <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
           </article>
         </div>
