--- a/faq/index.html
+++ b/faq/index.html
@@ -16,8 +16,8 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../css/normalize.css">
+  <link rel="stylesheet" href="../css/main.css">
 
   <meta name="theme-color" content="#fafafa">
 
@@ -39,8 +39,8 @@
           <div class="header-divider"></div>
           <nav>
             <ul>
-              <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-              <li><a href="about/index.html" target="_blank">About</a></li>
+              <li><a href="index.html" target="_blank">FAQ</a></li>
+              <li><a href="../about/index.html" target="_blank">About</a></li>
             </ul>
           </nav>
         </div>
@@ -85,12 +85,15 @@
             </div>
             <div class="social">
               <h4>Social</h4>
-              <div class="social-icons">
-                <p>
-                  <a
-                   href="https://www.facebook.com/yoursite" target="_blank"></a>
-                  </p>
-              </div>
+              <p class="fontawesome-icon">
+                <i class=""></i>
+              </p>
+              <p class="fontawesome-icon">
+                <i class=""></i>
+              </p>
+              <p class="fontawesome-icon">
+                <i class=""></i>
+              </p>
             </div>
           </div> <!-- footer content ends -->
         </div>
