added icons to my FAQ page

--- a/faq/index.html
+++ b/faq/index.html
@@ -85,15 +85,17 @@
             </div>
             <div class="social">
               <h4>Social</h4>
-              <p class="fontawesome-icon">
-                <i class=""></i>
-              </p>
-              <p class="fontawesome-icon">
-                <i class=""></i>
-              </p>
-              <p class="fontawesome-icon">
-                <i class=""></i>
-              </p>
+              <div class="social-icons">
+                <p>
+                  <a href=""><i class="fab fa-facebook-f"></i></a>
+                </p>
+                <p>
+                  <a href=""><i class="fab fa-twitter"></i></a>
+                </p>
+                <p>
+                  <a href=""><i class="fab fa-instagram"></i></a>
+                </p>
+              </div>
             </div>
           </div> <!-- footer content ends -->
         </div>
