--- a/about/index.html
+++ b/about/index.html
@@ -32,7 +32,7 @@
     <header>
         <div class="content-wrapper">
           <figure>
-            <a href="#">
+            <a href="../index.html">
               <img src="../img/unpluggedlogo.png" alt="unplugged logo">
             </a>
           </figure>
@@ -40,7 +40,7 @@
           <nav>
             <ul>
               <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
-              <li><a href="index.html" target="_blank">About</a></li>
+              <li><a href="../about/index.html" target="_blank">About</a></li>
             </ul>
           </nav>
         </div>
@@ -111,9 +111,14 @@
               <h4>Social</h4>
               <div class="social-icons">
                 <p>
-                  <a
-                   href="https://www.facebook.com/yoursite" target="_blank"></a>
-                  </p>
+                  <a href=""><i class="fab fa-facebook-f"></i></a>
+                </p>
+                <p>
+                  <a href=""><i class="fab fa-twitter"></i></a>
+                </p>
+                <p>
+                  <a href=""><i class="fab fa-instagram"></i></a>
+                </p>
               </div>
             </div>
           </div> <!-- footer content ends -->
