--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             Find out when we are holding our next retreat and how your company or team can sign up!
           </p>
         </div>
-        <div class="from">
+        <div class="form">
           <h3>Find out more</h3>
           <input type="text" name="name" value="email address">
           <input type="button" value="Download Itinerary">
@@ -117,8 +117,9 @@
 
     <section class="reviews">
       <div class="content-wrapper">
-        <h2>Be a better team in 5 days, like these.</h2>
+        <h2>Be a better team in 5 days, like this one.</h2>
         <article>
+          <img src="img/omar-lopez-296944-unsplash.jpg" alt="review picture">
           <div>
             <h3>LaCrue Bottling Co.<br>October 2017</h3>
             <p>
@@ -149,9 +150,14 @@
           <h4>Social</h4>
           <div class="social-icons">
             <p>
-              <a
-               href="https://www.facebook.com/yoursite" target="_blank"></a>
-              </p>
+              <a href=""><i class="fab fa-facebook-f"></i></a>
+            </p>
+            <p>
+              <a href=""><i class="fab fa-twitter"></i></a>
+            </p>
+            <p>
+              <a href=""><i class="fab fa-instagram"></i></a>
+            </p>
           </div>
         </div>
       </div> <!-- footer content ends -->
